# emmental_pll

./: Constraints_hardening.py  LICENSE  Main_Cut.py  Main_Futoshiki.py  Main_PLL.py  README.md  Visual_sudoku_grounding.py  download_data.sh  pyproject.toml  train_sudoku.sh
Data_raw/: truncated_icosahedron.json
Futoshiki/: Futoshi.py  Game_utils.py  Solver.py  __init__.py
Results/: 1oM.txt  Sudoku.txt
Scripts/: CFN.py  Net.py  PLL.py  Solver.py  Sudoku.py  __init__.py  generate_HRM_sudoku_dataset.py  test_utils.py  utils.py
